fix double scrolls on split-layout when stacked

--- a/scss/utility/layout.scss
+++ b/scss/utility/layout.scss
@@ -117,6 +117,7 @@
   @media (max-width: $breakpoint-desktop-small) {
     .column {
       min-width: 100%;
+      overflow: hidden;
     }
 
     .column + .column {
